# nyro

./: .gitignore  CHANGELOG.md  CHANGELOG_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  Makefile  README.md  README_CN.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  luacheck.yml  release-desktop.yml  release-server.yml
apioak/: apioak.lua  pdk.lua  sys.lua
apioak/backend/: init.lua
apioak/certificate/: init.lua
apioak/cli/: env.lua  generator.lua  init.lua  quit.lua  reload.lua  restart.lua  start.lua  stop.lua  test.lua  version.lua
apioak/cmd/: env.lua
apioak/consumer/: init.lua
apioak/core/: cache.lua  const.lua  init.lua  response.lua
apioak/pdk/: const.lua  consul.lua
apioak/plugin/: common.lua  init.lua
apioak/route/: ffi.lua  init.lua  matcher.lua
apioak/schema/: backend.lua  certificate.lua  init.lua  plugin.lua  route.lua  service.lua  upstream_node.lua
apioak/service/: init.lua
apioak/store/: init.lua
apioak/sys/: admin.lua  application.lua  balancer.lua  certificate.lua  dao.lua  router.lua
conf/: apioak.yaml  config.yaml  nginx.conf  nyro.yaml
crates/nyro-core/: Cargo.toml
crates/nyro-core/assets/: providers.json
crates/nyro-core/src/: config.rs  lib.rs
crates/nyro-core/src/admin/: mod.rs
crates/nyro-core/src/crypto/: mod.rs
crates/nyro-core/src/db/: mod.rs  models.rs
crates/nyro-core/src/logging/: mod.rs
crates/nyro-core/src/protocol/: mod.rs  types.rs
crates/nyro-core/src/protocol/anthropic/: decoder.rs  encoder.rs  stream.rs  types.rs
crates/nyro-core/src/protocol/gemini/: decoder.rs  encoder.rs  mod.rs  stream.rs  types.rs
crates/nyro-core/src/protocol/openai/: decoder.rs  encoder.rs  stream.rs  types.rs
crates/nyro-core/src/protocol/semantic/: tool_correlation.rs
crates/nyro-core/src/proxy/: auth.rs  client.rs  handler.rs  mod.rs  server.rs
crates/nyro-core/src/router/: matcher.rs  mod.rs
docs/design/: ai-gateway.md  model-capabilities.md  release-secrets.md
docs/zh_CN/: architecture-upgrade-plan.md
nyro/: nyro.lua
nyro/backend/: init.lua
nyro/certificate/: init.lua
nyro/cli/: env.lua  generator.lua  help.lua  init.lua  quit.lua  reload.lua  restart.lua  start.lua  stop.lua  test.lua  version.lua
nyro/consumer/: init.lua
nyro/core/: config.lua  const.lua  init.lua  meta.lua  response.lua  shared.lua
nyro/ffi/: init.lua  llm.lua
nyro/plugin/: common.lua  init.lua
nyro/route/: ffi.lua  init.lua  matcher.lua
nyro/schema/: backend.lua  certificate.lua  init.lua  plugin.lua  route.lua  service.lua  upstream_node.lua
nyro/service/: init.lua
nyro/store/: init.lua
rockspec/: apioak-master-0.rockspec  nyro-master-0.rockspec
scripts/install/: install.sh
scripts/release/: gen_latest_json.py
src-server/: Cargo.toml
src-server/src/: admin_routes.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
t/: NYRO.pm
webui/: package.json  pnpm-lock.yaml
(+81 files in other folders)
